cabal-version: 3.0

name: distillery
version: 0.1
synopsis: Data validation and refinement toolkit
homepage: https://github.com/nikita-volkov/distillery
bug-reports: https://github.com/nikita-volkov/distillery/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2020 Nikita Volkov
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location: git://github.com/nikita-volkov/distillery.git

library
  hs-source-dirs: library
  default-extensions: BangPatterns, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DerivingVia, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedLists, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules:
    Distillery.Extractor
    Distillery.Refine
  other-modules:
    Distillery.Prelude
  build-depends:
    aeson >=2 && <3,
    aeson-value-parser >=0.19 && <0.20,
    attoparsec >=0.13 && <0.15,
    base >=4.9 && <5,
    bytestring >=0.10 && <0.12,
    containers >=0.6.2 && <0.7,
    hashable >=1 && <2,
    megaparsec >=8.0 && <10,
    profunctors >=5.5.2 && <6,
    selective >=0.4 && <0.6,
    text >=1 && <3,
    transformers >=0.5 && <0.6,
    unordered-containers >=0.2.10 && <0.3,
    uuid >=1.3 && <2,
    vector >=0.12 && <0.13
